crates/efr-cli/src/follow/view/tests/snapshots/efr__follow__view__tests__layout__a_command_of_several_lines_shows_each_line.snap
---
source: crates/efr-cli/src/follow/view/tests/layout.rs
expression: "every_way(&[Sent(0, turn_started()), Sent(10, shell(1, FROM_SRC)),\nShot(\"running\"), Sent(2_510, ended(1, Some(0), None)),])"
---
=== 40 columns, colour
[running]
\e[33m•\e[0m \e[36m$ cd src\e[0m
    \e[36mexport RUST_LOG=debug\e[0m
    \e[36mcargo test -p efr-cli\e[0m
    \e[36munset RUST_LOG\e[0m

[end]
\e[33m·\e[0m \e[36m$ cd src\e[0m
    \e[36mexport RUST_LOG=debug\e[0m
    \e[36mcargo test -p efr-cli\e[0m
    \e[36munset RUST_LOG\e[0m
  \e[32m✓ 2.5s\e[0m
\e[33m•\e[0m \e[2mwaiting for the model\e[0m  \e[2m2s\e[0m

=== 40 columns, NO_COLOR
[running]
\e[1m•\e[0m $ cd src
    export RUST_LOG=debug
    cargo test -p efr-cli
    unset RUST_LOG

[end]
\e[1m·\e[0m $ cd src
    export RUST_LOG=debug
    cargo test -p efr-cli
    unset RUST_LOG
  ✓ 2.5s
\e[1m•\e[0m \e[2mwaiting for the model\e[0m  \e[2m2s\e[0m

=== 80 columns, colour
[running]
\e[33m•\e[0m \e[36m$ cd src\e[0m
    \e[36mexport RUST_LOG=debug\e[0m
    \e[36mcargo test -p efr-cli\e[0m
    \e[36munset RUST_LOG\e[0m

[end]
\e[33m·\e[0m \e[36m$ cd src\e[0m
    \e[36mexport RUST_LOG=debug\e[0m
    \e[36mcargo test -p efr-cli\e[0m
    \e[36munset RUST_LOG\e[0m
  \e[32m✓ 2.5s\e[0m
\e[33m•\e[0m \e[2mwaiting for the model\e[0m  \e[2m2s\e[0m

=== 80 columns, NO_COLOR
[running]
\e[1m•\e[0m $ cd src
    export RUST_LOG=debug
    cargo test -p efr-cli
    unset RUST_LOG

[end]
\e[1m·\e[0m $ cd src
    export RUST_LOG=debug
    cargo test -p efr-cli
    unset RUST_LOG
  ✓ 2.5s
\e[1m•\e[0m \e[2mwaiting for the model\e[0m  \e[2m2s\e[0m

=== not a terminal
[running]
stdout:
stderr:

[end]
stdout:
stderr:
· $ cd src
    export RUST_LOG=debug
    cargo test -p efr-cli
    unset RUST_LOG
  ✓ 2.5s
