crates/efr-cli/src/follow/view/tests/snapshots/efr__follow__view__tests__layout__a_file_write_shows_the_first_lines_of_its_diff.snap
---
source: crates/efr-cli/src/follow/view/tests/layout.rs
expression: "every_way(&[Sent(0, turn_started()), Sent(10, write_file(1, \"src/main.rs\")),\nSent(40, changed(1, changes, Some(&main_rs_diff()))),])"
---
=== 40 columns, colour
[end]
\e[33m·\e[0m \e[36mwrite src/main.rs\e[0m
\e[2m  │ \e[0m\e[36m@@ -1,4 +1,27 @@\e[0m
\e[2m  │ \e[0m \e[35mfn\e[0m \e[34mmain\e[0m() {
\e[2m  │ \e[0m\e[1;31m-\e[0m    println!(\e[32m"old"\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    println!(\e[32m"a new greeting that\e[0m \e[2m↩\e[0m
\e[2m  │ \e[0m\e[32mis much wider than forty columns"\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m1\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m2\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m3\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m4\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m5\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m6\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m7\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m8\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m9\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m10\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m11\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m12\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m13\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m14\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m15\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m16\e[0m);
\e[2m  │ \e[0m\e[2m… 7 more lines\e[0m
  \e[32m✓\e[0m
\e[33m•\e[0m \e[2mwaiting for the model\e[0m

=== 40 columns, NO_COLOR
[end]
\e[1m·\e[0m write src/main.rs
\e[2m  │ \e[0m@@ -1,4 +1,27 @@
\e[2m  │ \e[0m fn main() {
\e[2m  │ \e[0m\e[1m-\e[0m    println!("old");
\e[2m  │ \e[0m\e[1m+\e[0m    println!("a new greeting that \e[2m↩\e[0m
\e[2m  │ \e[0mis much wider than forty columns");
\e[2m  │ \e[0m\e[1m+\e[0m    step(1);
\e[2m  │ \e[0m\e[1m+\e[0m    step(2);
\e[2m  │ \e[0m\e[1m+\e[0m    step(3);
\e[2m  │ \e[0m\e[1m+\e[0m    step(4);
\e[2m  │ \e[0m\e[1m+\e[0m    step(5);
\e[2m  │ \e[0m\e[1m+\e[0m    step(6);
\e[2m  │ \e[0m\e[1m+\e[0m    step(7);
\e[2m  │ \e[0m\e[1m+\e[0m    step(8);
\e[2m  │ \e[0m\e[1m+\e[0m    step(9);
\e[2m  │ \e[0m\e[1m+\e[0m    step(10);
\e[2m  │ \e[0m\e[1m+\e[0m    step(11);
\e[2m  │ \e[0m\e[1m+\e[0m    step(12);
\e[2m  │ \e[0m\e[1m+\e[0m    step(13);
\e[2m  │ \e[0m\e[1m+\e[0m    step(14);
\e[2m  │ \e[0m\e[1m+\e[0m    step(15);
\e[2m  │ \e[0m\e[1m+\e[0m    step(16);
\e[2m  │ \e[0m\e[2m… 7 more lines\e[0m
  ✓
\e[1m•\e[0m \e[2mwaiting for the model\e[0m

=== 80 columns, colour
[end]
\e[33m·\e[0m \e[36mwrite src/main.rs\e[0m
\e[2m  │ \e[0m\e[36m@@ -1,4 +1,27 @@\e[0m
\e[2m  │ \e[0m \e[35mfn\e[0m \e[34mmain\e[0m() {
\e[2m  │ \e[0m\e[1;31m-\e[0m    println!(\e[32m"old"\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    println!(\e[32m"a new greeting that is much wider than forty columns"\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m1\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m2\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m3\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m4\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m5\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m6\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m7\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m8\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m9\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m10\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m11\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m12\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m13\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m14\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m15\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m16\e[0m);
\e[2m  │ \e[0m\e[2m… 7 more lines\e[0m
  \e[32m✓\e[0m
\e[33m•\e[0m \e[2mwaiting for the model\e[0m

=== 80 columns, NO_COLOR
[end]
\e[1m·\e[0m write src/main.rs
\e[2m  │ \e[0m@@ -1,4 +1,27 @@
\e[2m  │ \e[0m fn main() {
\e[2m  │ \e[0m\e[1m-\e[0m    println!("old");
\e[2m  │ \e[0m\e[1m+\e[0m    println!("a new greeting that is much wider than forty columns");
\e[2m  │ \e[0m\e[1m+\e[0m    step(1);
\e[2m  │ \e[0m\e[1m+\e[0m    step(2);
\e[2m  │ \e[0m\e[1m+\e[0m    step(3);
\e[2m  │ \e[0m\e[1m+\e[0m    step(4);
\e[2m  │ \e[0m\e[1m+\e[0m    step(5);
\e[2m  │ \e[0m\e[1m+\e[0m    step(6);
\e[2m  │ \e[0m\e[1m+\e[0m    step(7);
\e[2m  │ \e[0m\e[1m+\e[0m    step(8);
\e[2m  │ \e[0m\e[1m+\e[0m    step(9);
\e[2m  │ \e[0m\e[1m+\e[0m    step(10);
\e[2m  │ \e[0m\e[1m+\e[0m    step(11);
\e[2m  │ \e[0m\e[1m+\e[0m    step(12);
\e[2m  │ \e[0m\e[1m+\e[0m    step(13);
\e[2m  │ \e[0m\e[1m+\e[0m    step(14);
\e[2m  │ \e[0m\e[1m+\e[0m    step(15);
\e[2m  │ \e[0m\e[1m+\e[0m    step(16);
\e[2m  │ \e[0m\e[2m… 7 more lines\e[0m
  ✓
\e[1m•\e[0m \e[2mwaiting for the model\e[0m

=== not a terminal
[end]
stdout:
stderr:
· write src/main.rs
  │ @@ -1,4 +1,27 @@
  │  fn main() {
  │ -    println!("old");
  │ +    println!("a new greeting that is much wider than forty columns");
  │ +    step(1);
  │ +    step(2);
  │ +    step(3);
  │ +    step(4);
  │ +    step(5);
  │ +    step(6);
  │ +    step(7);
  │ +    step(8);
  │ +    step(9);
  │ +    step(10);
  │ +    step(11);
  │ +    step(12);
  │ +    step(13);
  │ +    step(14);
  │ +    step(15);
  │ +    step(16);
  │ … 7 more lines
  ✓
