crates/efr-cli/src/follow/view/tests/snapshots/efr__follow__view__tests__layout__a_long_word_goes_on_in_the_next_row_with_no_space.snap
---
source: crates/efr-cli/src/follow/view/tests/layout.rs
expression: "every_way(&[Sent(0, turn_started()), Sent(10, shell(1, command)),\nSent(20, asked(1, &format!(\"shell: run {command:?}\"), None)), Shot(\"asked\"),\nKey(1, ApprovalDecision::Allow), Sent(900, ended(1, Some(0), None)),])"
---
=== 40 columns, colour
[asked]
\e[1;33m? allow this command\e[0m
\e[2m│ \e[0m\e[36mecho "built \e[0m\e[2m\\e[0m
\e[2m│ \e[0m    \e[36m$HOME/p/eggfriedrice.code/target/\e[0m\e[2m↩\e[0m
\e[2m│ \e[0m    \e[36mdebug/build/libghostty-vt-1a2b3c4\e[0m\e[2m↩\e[0m
\e[2m│ \e[0m    \e[36md5e6f/out/lib/libghostty-vt.so"\e[0m
\e[2m│ \e[0m\e[1my\e[0m\e[2m allow\e[0m\e[2m · \e[0m\e[1mn\e[0m\e[2m deny\e[0m

[end]
\e[32m✓ allowed\e[0m
\e[33m·\e[0m \e[36m$ echo "built \e[0m\e[2m\\e[0m
        \e[36m$HOME/p/eggfriedrice.code/targe\e[0m\e[2m↩\e[0m
        \e[36mt/debug/build/libghostty-vt-1a2\e[0m\e[2m↩\e[0m
        \e[36mb3c4d5e6f/out/lib/libghostty-vt\e[0m\e[2m↩\e[0m
        \e[36m.so"\e[0m
  \e[32m✓\e[0m
\e[33m•\e[0m \e[2mwaiting for the model\e[0m

=== 40 columns, NO_COLOR
[asked]
\e[1m? allow this command\e[0m
\e[2m│ \e[0mecho "built \e[2m\\e[0m
\e[2m│ \e[0m    $HOME/p/eggfriedrice.code/target/\e[2m↩\e[0m
\e[2m│ \e[0m    debug/build/libghostty-vt-1a2b3c4\e[2m↩\e[0m
\e[2m│ \e[0m    d5e6f/out/lib/libghostty-vt.so"
\e[2m│ \e[0m\e[1my\e[0m\e[2m allow\e[0m\e[2m · \e[0m\e[1mn\e[0m\e[2m deny\e[0m

[end]
✓ allowed
\e[1m·\e[0m $ echo "built \e[2m\\e[0m
        $HOME/p/eggfriedrice.code/targe\e[2m↩\e[0m
        t/debug/build/libghostty-vt-1a2\e[2m↩\e[0m
        b3c4d5e6f/out/lib/libghostty-vt\e[2m↩\e[0m
        .so"
  ✓
\e[1m•\e[0m \e[2mwaiting for the model\e[0m

=== 80 columns, colour
[asked]
\e[1;33m? allow this command\e[0m
\e[2m│ \e[0m\e[36mecho "built \e[0m\e[2m\\e[0m
\e[2m│ \e[0m    \e[36m$HOME/p/eggfriedrice.code/target/debug/build/libghostty-vt-1a2b3c4d5e6f/o\e[0m\e[2m↩\e[0m
\e[2m│ \e[0m    \e[36mut/lib/libghostty-vt.so"\e[0m
\e[2m│ \e[0m\e[1my\e[0m\e[2m allow\e[0m\e[2m · \e[0m\e[1mn\e[0m\e[2m deny\e[0m

[end]
\e[32m✓ allowed\e[0m
\e[33m·\e[0m \e[36m$ echo "built \e[0m\e[2m\\e[0m
        \e[36m$HOME/p/eggfriedrice.code/target/debug/build/libghostty-vt-1a2b3c4d5e6f\e[0m\e[2m↩\e[0m
        \e[36m/out/lib/libghostty-vt.so"\e[0m
  \e[32m✓\e[0m
\e[33m•\e[0m \e[2mwaiting for the model\e[0m

=== 80 columns, NO_COLOR
[asked]
\e[1m? allow this command\e[0m
\e[2m│ \e[0mecho "built \e[2m\\e[0m
\e[2m│ \e[0m    $HOME/p/eggfriedrice.code/target/debug/build/libghostty-vt-1a2b3c4d5e6f/o\e[2m↩\e[0m
\e[2m│ \e[0m    ut/lib/libghostty-vt.so"
\e[2m│ \e[0m\e[1my\e[0m\e[2m allow\e[0m\e[2m · \e[0m\e[1mn\e[0m\e[2m deny\e[0m

[end]
✓ allowed
\e[1m·\e[0m $ echo "built \e[2m\\e[0m
        $HOME/p/eggfriedrice.code/target/debug/build/libghostty-vt-1a2b3c4d5e6f\e[2m↩\e[0m
        /out/lib/libghostty-vt.so"
  ✓
\e[1m•\e[0m \e[2mwaiting for the model\e[0m

=== not a terminal
[asked]
stdout:
stderr:
? allow this command
│ echo "built $HOME/p/eggfriedrice.code/target/debug/build/libghostty-vt-1a2b3c4d5e6f/out/lib/libghostty-vt.so"
│ y allow · n deny

[end]
stdout:
stderr:
? allow this command
│ echo "built $HOME/p/eggfriedrice.code/target/debug/build/libghostty-vt-1a2b3c4d5e6f/out/lib/libghostty-vt.so"
│ y allow · n deny
✓ allowed
· $ echo "built $HOME/p/eggfriedrice.code/target/debug/build/libghostty-vt-1a2b3c4d5e6f/out/lib/libghostty-vt.so"
  ✓
