crates/efr-cli/src/follow/view/tests/snapshots/efr__follow__view__tests__layout__a_patch_names_its_files_and_shows_one_diff_per_file.snap
---
source: crates/efr-cli/src/follow/view/tests/layout.rs
expression: "every_way(&[Sent(0, turn_started()), Sent(10, apply_patch(1, PATCH)),\nShot(\"running\"),\nSent(40, changed(1, patch_changes(), Some(&patch_diff(false)))),])"
---
=== 40 columns, colour
[running]
\e[33m•\e[0m \e[36mapply_patch src/main.rs +1 −1, src/li…\e[0m

[end]
\e[33m·\e[0m \e[36mapply_patch src/main.rs +1 −1,\e[0m
              \e[36msrc/lib.rs +1,\e[0m
              \e[36mnew notes.md +2,\e[0m
              \e[36mdelete old.rs,\e[0m
              \e[36mmove src/expr.rs →\e[0m
              \e[36msrc/expression.rs +1 −1\e[0m
  \e[36msrc/main.rs\e[0m
\e[2m  │ \e[0m\e[36m@@ -1,3 +1,24 @@\e[0m
\e[2m  │ \e[0m \e[35mfn\e[0m \e[34mmain\e[0m() {
\e[2m  │ \e[0m\e[1;31m-\e[0m    println!(\e[32m"old"\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    println!(\e[32m"a new greeting that\e[0m \e[2m↩\e[0m
\e[2m  │ \e[0m\e[32mis much wider than forty columns"\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m1\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m2\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m3\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m4\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m5\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m6\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m7\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m8\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m9\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m10\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m11\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m12\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m13\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m14\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m15\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m16\e[0m);
\e[2m  │ \e[0m\e[2m… 6 more lines\e[0m
  \e[36msrc/lib.rs\e[0m
\e[2m  │ \e[0m\e[36m@@ -1,1 +1,2 @@\e[0m
\e[2m  │ \e[0m \e[35mpub\e[0m \e[35mmod\e[0m \e[33mparse\e[0m;
\e[2m  │ \e[0m\e[1;32m+\e[0m\e[35mpub\e[0m \e[35mmod\e[0m \e[33mgreet\e[0m;
  \e[2mnew \e[0m\e[36mnotes.md\e[0m
\e[2m  │ \e[0m\e[36m@@ -0,0 +1,2 @@\e[0m
\e[2m  │ \e[0m\e[1;32m+\e[0m\e[34m#\e[0m \e[34mNotes\e[0m
\e[2m  │ \e[0m\e[1;32m+\e[0m
  \e[2mdeleted \e[0m\e[36mold.rs\e[0m
\e[2m  │ \e[0m\e[36m@@ -1,1 +0,0 @@\e[0m
\e[2m  │ \e[0m\e[1;31m-\e[0m\e[35mfn\e[0m \e[34mold\e[0m() {}
  \e[2mmoved \e[0m\e[36msrc/expr.rs → src/expression.rs\e[0m
\e[2m  │ \e[0m\e[36m@@ -1,3 +1,3 @@\e[0m
\e[2m  │ \e[0m \e[35mpub\e[0m \e[35mfn\e[0m \e[34mparse\e[0m() {
\e[2m  │ \e[0m\e[1;31m-\e[0m    \e[35mlet\e[0m a \e[35m=\e[0m \e[33m1\e[0m;
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[35mlet\e[0m a \e[35m=\e[0m \e[33m2\e[0m;
\e[2m  │ \e[0m }
  \e[32m✓\e[0m
\e[33m•\e[0m \e[2mwaiting for the model\e[0m

=== 40 columns, NO_COLOR
[running]
\e[1m•\e[0m apply_patch src/main.rs +1 −1, src/li…

[end]
\e[1m·\e[0m apply_patch src/main.rs +1 −1,
              src/lib.rs +1,
              new notes.md +2,
              delete old.rs,
              move src/expr.rs →
              src/expression.rs +1 −1
  src/main.rs
\e[2m  │ \e[0m@@ -1,3 +1,24 @@
\e[2m  │ \e[0m fn main() {
\e[2m  │ \e[0m\e[1m-\e[0m    println!("old");
\e[2m  │ \e[0m\e[1m+\e[0m    println!("a new greeting that \e[2m↩\e[0m
\e[2m  │ \e[0mis much wider than forty columns");
\e[2m  │ \e[0m\e[1m+\e[0m    step(1);
\e[2m  │ \e[0m\e[1m+\e[0m    step(2);
\e[2m  │ \e[0m\e[1m+\e[0m    step(3);
\e[2m  │ \e[0m\e[1m+\e[0m    step(4);
\e[2m  │ \e[0m\e[1m+\e[0m    step(5);
\e[2m  │ \e[0m\e[1m+\e[0m    step(6);
\e[2m  │ \e[0m\e[1m+\e[0m    step(7);
\e[2m  │ \e[0m\e[1m+\e[0m    step(8);
\e[2m  │ \e[0m\e[1m+\e[0m    step(9);
\e[2m  │ \e[0m\e[1m+\e[0m    step(10);
\e[2m  │ \e[0m\e[1m+\e[0m    step(11);
\e[2m  │ \e[0m\e[1m+\e[0m    step(12);
\e[2m  │ \e[0m\e[1m+\e[0m    step(13);
\e[2m  │ \e[0m\e[1m+\e[0m    step(14);
\e[2m  │ \e[0m\e[1m+\e[0m    step(15);
\e[2m  │ \e[0m\e[1m+\e[0m    step(16);
\e[2m  │ \e[0m\e[2m… 6 more lines\e[0m
  src/lib.rs
\e[2m  │ \e[0m@@ -1,1 +1,2 @@
\e[2m  │ \e[0m pub mod parse;
\e[2m  │ \e[0m\e[1m+\e[0mpub mod greet;
  \e[2mnew \e[0mnotes.md
\e[2m  │ \e[0m@@ -0,0 +1,2 @@
\e[2m  │ \e[0m\e[1m+\e[0m# Notes
\e[2m  │ \e[0m\e[1m+\e[0m
  \e[2mdeleted \e[0mold.rs
\e[2m  │ \e[0m@@ -1,1 +0,0 @@
\e[2m  │ \e[0m\e[1m-\e[0mfn old() {}
  \e[2mmoved \e[0msrc/expr.rs → src/expression.rs
\e[2m  │ \e[0m@@ -1,3 +1,3 @@
\e[2m  │ \e[0m pub fn parse() {
\e[2m  │ \e[0m\e[1m-\e[0m    let a = 1;
\e[2m  │ \e[0m\e[1m+\e[0m    let a = 2;
\e[2m  │ \e[0m }
  ✓
\e[1m•\e[0m \e[2mwaiting for the model\e[0m

=== 80 columns, colour
[running]
\e[33m•\e[0m \e[36mapply_patch src/main.rs +1 −1, src/lib.rs +1, new notes.md +2, delete old.rs,…\e[0m

[end]
\e[33m·\e[0m \e[36mapply_patch src/main.rs +1 −1, src/lib.rs +1, new notes.md +2, delete old.rs,\e[0m
              \e[36mmove src/expr.rs → src/expression.rs +1 −1\e[0m
  \e[36msrc/main.rs\e[0m
\e[2m  │ \e[0m\e[36m@@ -1,3 +1,24 @@\e[0m
\e[2m  │ \e[0m \e[35mfn\e[0m \e[34mmain\e[0m() {
\e[2m  │ \e[0m\e[1;31m-\e[0m    println!(\e[32m"old"\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    println!(\e[32m"a new greeting that is much wider than forty columns"\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m1\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m2\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m3\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m4\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m5\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m6\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m7\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m8\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m9\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m10\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m11\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m12\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m13\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m14\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m15\e[0m);
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[36mstep\e[0m(\e[33m16\e[0m);
\e[2m  │ \e[0m\e[2m… 6 more lines\e[0m
  \e[36msrc/lib.rs\e[0m
\e[2m  │ \e[0m\e[36m@@ -1,1 +1,2 @@\e[0m
\e[2m  │ \e[0m \e[35mpub\e[0m \e[35mmod\e[0m \e[33mparse\e[0m;
\e[2m  │ \e[0m\e[1;32m+\e[0m\e[35mpub\e[0m \e[35mmod\e[0m \e[33mgreet\e[0m;
  \e[2mnew \e[0m\e[36mnotes.md\e[0m
\e[2m  │ \e[0m\e[36m@@ -0,0 +1,2 @@\e[0m
\e[2m  │ \e[0m\e[1;32m+\e[0m\e[34m#\e[0m \e[34mNotes\e[0m
\e[2m  │ \e[0m\e[1;32m+\e[0m
  \e[2mdeleted \e[0m\e[36mold.rs\e[0m
\e[2m  │ \e[0m\e[36m@@ -1,1 +0,0 @@\e[0m
\e[2m  │ \e[0m\e[1;31m-\e[0m\e[35mfn\e[0m \e[34mold\e[0m() {}
  \e[2mmoved \e[0m\e[36msrc/expr.rs → src/expression.rs\e[0m
\e[2m  │ \e[0m\e[36m@@ -1,3 +1,3 @@\e[0m
\e[2m  │ \e[0m \e[35mpub\e[0m \e[35mfn\e[0m \e[34mparse\e[0m() {
\e[2m  │ \e[0m\e[1;31m-\e[0m    \e[35mlet\e[0m a \e[35m=\e[0m \e[33m1\e[0m;
\e[2m  │ \e[0m\e[1;32m+\e[0m    \e[35mlet\e[0m a \e[35m=\e[0m \e[33m2\e[0m;
\e[2m  │ \e[0m }
  \e[32m✓\e[0m
\e[33m•\e[0m \e[2mwaiting for the model\e[0m

=== 80 columns, NO_COLOR
[running]
\e[1m•\e[0m apply_patch src/main.rs +1 −1, src/lib.rs +1, new notes.md +2, delete old.rs,…

[end]
\e[1m·\e[0m apply_patch src/main.rs +1 −1, src/lib.rs +1, new notes.md +2, delete old.rs,
              move src/expr.rs → src/expression.rs +1 −1
  src/main.rs
\e[2m  │ \e[0m@@ -1,3 +1,24 @@
\e[2m  │ \e[0m fn main() {
\e[2m  │ \e[0m\e[1m-\e[0m    println!("old");
\e[2m  │ \e[0m\e[1m+\e[0m    println!("a new greeting that is much wider than forty columns");
\e[2m  │ \e[0m\e[1m+\e[0m    step(1);
\e[2m  │ \e[0m\e[1m+\e[0m    step(2);
\e[2m  │ \e[0m\e[1m+\e[0m    step(3);
\e[2m  │ \e[0m\e[1m+\e[0m    step(4);
\e[2m  │ \e[0m\e[1m+\e[0m    step(5);
\e[2m  │ \e[0m\e[1m+\e[0m    step(6);
\e[2m  │ \e[0m\e[1m+\e[0m    step(7);
\e[2m  │ \e[0m\e[1m+\e[0m    step(8);
\e[2m  │ \e[0m\e[1m+\e[0m    step(9);
\e[2m  │ \e[0m\e[1m+\e[0m    step(10);
\e[2m  │ \e[0m\e[1m+\e[0m    step(11);
\e[2m  │ \e[0m\e[1m+\e[0m    step(12);
\e[2m  │ \e[0m\e[1m+\e[0m    step(13);
\e[2m  │ \e[0m\e[1m+\e[0m    step(14);
\e[2m  │ \e[0m\e[1m+\e[0m    step(15);
\e[2m  │ \e[0m\e[1m+\e[0m    step(16);
\e[2m  │ \e[0m\e[2m… 6 more lines\e[0m
  src/lib.rs
\e[2m  │ \e[0m@@ -1,1 +1,2 @@
\e[2m  │ \e[0m pub mod parse;
\e[2m  │ \e[0m\e[1m+\e[0mpub mod greet;
  \e[2mnew \e[0mnotes.md
\e[2m  │ \e[0m@@ -0,0 +1,2 @@
\e[2m  │ \e[0m\e[1m+\e[0m# Notes
\e[2m  │ \e[0m\e[1m+\e[0m
  \e[2mdeleted \e[0mold.rs
\e[2m  │ \e[0m@@ -1,1 +0,0 @@
\e[2m  │ \e[0m\e[1m-\e[0mfn old() {}
  \e[2mmoved \e[0msrc/expr.rs → src/expression.rs
\e[2m  │ \e[0m@@ -1,3 +1,3 @@
\e[2m  │ \e[0m pub fn parse() {
\e[2m  │ \e[0m\e[1m-\e[0m    let a = 1;
\e[2m  │ \e[0m\e[1m+\e[0m    let a = 2;
\e[2m  │ \e[0m }
  ✓
\e[1m•\e[0m \e[2mwaiting for the model\e[0m

=== not a terminal
[running]
stdout:
stderr:

[end]
stdout:
stderr:
· apply_patch src/main.rs +1 −1, src/lib.rs +1, new notes.md +2, delete old.rs, move src/expr.rs → src/expression.rs +1 −1
  src/main.rs
  │ @@ -1,3 +1,24 @@
  │  fn main() {
  │ -    println!("old");
  │ +    println!("a new greeting that is much wider than forty columns");
  │ +    step(1);
  │ +    step(2);
  │ +    step(3);
  │ +    step(4);
  │ +    step(5);
  │ +    step(6);
  │ +    step(7);
  │ +    step(8);
  │ +    step(9);
  │ +    step(10);
  │ +    step(11);
  │ +    step(12);
  │ +    step(13);
  │ +    step(14);
  │ +    step(15);
  │ +    step(16);
  │ … 6 more lines
  src/lib.rs
  │ @@ -1,1 +1,2 @@
  │  pub mod parse;
  │ +pub mod greet;
  new notes.md
  │ @@ -0,0 +1,2 @@
  │ +# Notes
  │ +
  deleted old.rs
  │ @@ -1,1 +0,0 @@
  │ -fn old() {}
  moved src/expr.rs → src/expression.rs
  │ @@ -1,3 +1,3 @@
  │  pub fn parse() {
  │ -    let a = 1;
  │ +    let a = 2;
  │  }
  ✓
